kubernetes/prod/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-flipkart-deployment
  namespace: prod
  labels:
    app: flipkart
    env: prod
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: flipkart
      env: prod
  template:
    metadata:
      labels:
        app: flipkart
        env: prod
    spec:
      containers:
        - name: flipkart-ms
          image: 559220132560.dkr.ecr.ap-south-1.amazonaws.com/flipkart-ms:dev-flipkart-ms-v1.35
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 200m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: prod-flipkart-application-config
